--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-redux": "^7.1.34",
     "axios": "^1.9.0",
     "bootstrap": "5.3.6",
     "core-js": "^3.42.0",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@popperjs/core": "^2.11.8",
+    "@types/react-router-dom": "^5.3.3",
     "cross-env": "^7.0.3",
     "levenary": "^1.1.1"
   },
